--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -130,7 +130,7 @@ body {
 
 /* All homepage links: */
 
-[class*="home-"], [class*="maker-"] {
+[class*="home-"], [class*="maker-"], [class*="post-"] {
 	a {
 		font-family: "base-mono-narrow", monospace;
 		text-decoration: none;
