--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,9 +8,9 @@ layout: default
 
   <div class="post-main-content">
 
-    <div class="post__big-title">{{ page.title }}</div>
+    <div class="post__big-title"><span aria-label="page type">Blog //</span>{{ page.title }}</div>
 
-    <!-- insert pull quote here -->
+    <!-- make span an <a> tag to blog home and put h1 tags around page.title w/ the font styles when finalizing -->
 
     <div class="post__metadata">
 
@@ -35,11 +35,11 @@ layout: default
 
       {% assign catsize = page.categories | size %}
       {% if catsize >= 1 %}
-      <div class="post-meta__categories">Filed under:
+      <div class="post-meta__categories">Filed to:
         {% for c in page.categories %}
         {% assign last = page.categories | last %}
-        {% if c == last %} <a href="#">{{ c }}</a>
-        {% else %} <a href="#">{{ c }}</a>,
+        {% if c == last %} <a href="#">{{ c | downcase }}</a>
+        {% else %} <a href="#">{{ c | downcase }}</a>,
         {% endif %}{% endfor %}
       </div>
       {% endif %}
