Add comment instructing future changes post-blog edits
- Restyling universal link selectors, but didn't want that to get
  mixed up with the blog post feature branch.

- Made the change on the blog post page and liked how it looked way more
  than original styling, thus the note.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -133,6 +133,7 @@ body {
 [class*="home-"], [class*="maker-"], [class*="post-"] {
 	a {
 		font-family: "base-mono-narrow", monospace;
+	//	font-weight: bold; // >>>>>>>>>>>>>>>>> undo this and redo it as a separate commit
 		text-decoration: none;
 		color: black;
 		border-bottom: 2px solid magenta;
