--- a/assets/css/_sass/_blog-post.scss
+++ b/assets/css/_sass/_blog-post.scss
@@ -86,6 +86,18 @@
 
 .post__content {
 	grid-area: content;
+	position: relative;
+//	font-size: 18px;
+	p:first-of-type {
+		&::first-letter {
+			float: left;
+			padding-right: .5rem;
+			font-size: 3em;
+			font-weight: 900;
+			line-height: 1;
+			color: hsla(186,80%,70%,1);
+		}
+	}
 }
 
 /* Footer: */
