Add margin to bottom of metadata for consistent spacing
- There's a 1rem margin on top of paragraphs by default so this makes it
  1.5rem total, which is line height of both the subtitle and the body
  text.

--- a/assets/css/_sass/_blog-post.scss
+++ b/assets/css/_sass/_blog-post.scss
@@ -60,6 +60,7 @@
 
 .post__metadata {
 	grid-area: meta;
+	margin-bottom: .5rem; // + 1rem default <p> spacing = line hieght
 }
 
 .post-meta__quote {
