--- a/assets/css/_sass/_blog-post.scss
+++ b/assets/css/_sass/_blog-post.scss
@@ -72,7 +72,19 @@
 }
 
 .post-meta__date {
-
+	@media screen and (min-width: 600px) {
+		display: inline-block;
+		padding-left: 2em;
+		color: rgba(0,0,0,.5);
+		&::before {
+			content: '//';
+			position: absolute;
+			left: 0;
+			top: 0;
+			font-weight: bold;
+			color: hsla(186,80%,70%,1);
+		}
+	}
 }
 
 .post-meta__categories {
