--- a/assets/css/_sass/_research.scss
+++ b/assets/css/_sass/_research.scss
@@ -97,25 +97,82 @@
 	}
 }
 
+/* Galleries: */
+
+[class*="big-title"][class*="research"] {
+	position: relative;
+	margin-top: 1em;
+	margin-bottom: .5em;
+	font-size: 2rem;
+	font-weight: 900;
+//	font-family: "Oswald";
+	text-transform: uppercase;
+	line-height: 1;
+}
+
+[class*="__subtitle"][class*="research"] {
+	font-family: "Oswald", sans-serif;
+}
+
+/* 1. Internal: */
+
+.research-items__internal {
+
+}
+
+.research-internal__big-title {
+
+}
+
+.research-internal__subtitle {
+
+}
+
+/* 2. Collaborative: */
+
+.research-items__collab {
+
+}
+
+.research-collab__big-title {
+
+}
+
+.research-collab__subtitle {
+
+}
+
 /* Grid for items: */
 
 .research-items-wrapper {
 	position: relative;
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-//	grid-auto-rows: minmax(300px, 1fr);
+	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+	margin-top: 1em;
 }
 
 /* Items: */
 
 .research__item {
+	grid-row: span 4;
 	position: relative;
 	display: flex;
 	flex-flow: column nowrap;
-//	padding: 1em;
-	margin-bottom: 1em;
-	margin-right: 1em;
-	border: 1px solid black;
+	align-items: center;
+//	min-height: 250px;
+	min-width: 250px;
+	margin-bottom: 2em;
+	margin-right: 2em;
+//	border: 1px solid rgba(0,0,0,.15);
+//	border: 2px solid black;
+/*	&:nth-of-type(2) {
+		grid-row: 2 / span 4;
+		grid-column: 2;
+	}
+	&:nth-of-type(3) {
+		grid-row: 3 / span 4;
+		grid-column: 3;
+	} */
 	a {
 		text-decoration: none;
 	}
@@ -124,25 +181,33 @@
 .research-item__img {
 	position: relative;
 //	width: 200px;
-	margin: 0 auto;
-	background-color: rgba(0,0,0,.05);
-	border: 1px solid rgba(0,0,0,.15);
+//	margin: 0 auto;
+	width: 300px;
+	height: 200px;
+	overflow: hidden;
+//	border: 4px solid rgba(0,0,0,.7);
+//	border: 1px solid rgba(0,0,0,.15);
 	img {
-		position: relative;
-		width: 100%;
+		position: absolute;
+	//	min-width: 300px;
+		min-height: 100%;
+	//	min-width: 100%;
+		
 	}
 }
 
-.research-item__title {
-	margin-top: 1em;
+.research-item__title, .research-item__year {
+	margin-top: .5em;
 	font-family: "Oswald", sans-serif;
-	font-weight: 600;
-	font-size: 1.25rem;
-	text-align: center;
+	font-weight: 400;
+	font-size: 1.5rem;
+	text-transform: uppercase;
+	line-height: 1;
 	color: black;
 }
 
-
-
-
-
+.research-item__year {
+	margin-top: .25rem;
+//	font-weight: 300;
+	color: rgba(0,0,0,.5);
+}
