--- a/assets/css/_sass/_research.scss
+++ b/assets/css/_sass/_research.scss
@@ -140,19 +140,18 @@
 .research-items-wrapper {
 	position: relative;
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+//	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+	grid-template-columns: repeat(7, 1fr);
 	margin-top: 1rem;
 }
 
 /* Items: */
 
 .research__item {
+	grid-column-end: span 2;
+	grid-row-end: span 2;
 	position: relative;
-//	width: 275px;
-//	height: 275px;
-//	margin-bottom: 3rem;
-//	margin-right: .75rem;
-//	margin-left: .75rem;
+	margin: 1rem;
 	background-color: white;
 	a {
 		text-decoration: none;
@@ -176,21 +175,84 @@
 			}
 		}
 	}
+	&:nth-child(1) {
+		grid-column-start: 1;
+		grid-row-start: 1;
+	}
+
+	&:nth-child(2) {
+		grid-column-start: 4;
+		grid-row-start: 1;
+	}
+
+	&:nth-child(3) {
+		grid-column-start: 6;
+		grid-row-start: 2;
+	}
+
+	&:nth-child(4) {
+		grid-column-start: 4;
+		grid-row-start: 3;
+	}
+
+	&:nth-child(5) {
+		grid-column-start: 3;
+		grid-row-start: 5;
+	}
+
+	&:nth-child(6) {
+		grid-column-start: 6;
+		grid-row-start: 7;
+	}
+
+	&:nth-child(7) {
+		grid-column-start: 1;
+		grid-row-start: 8;
+	}
+
+	&:nth-child(8) {
+		grid-column-start: 4;
+		grid-row-start: 8;
+	}
+
+	&:nth-child(9) {
+		grid-column-start: 2;
+		grid-row-start: 11;
+	}
+
+	&:nth-child(10) {
+		grid-column-start: 4;
+		grid-row-start: 11;
+	}
+
+	&:nth-child(11) {
+		grid-column-start: 5;
+		grid-row-start: 13;
+	}
+
+	&:nth-child(12) {
+		grid-column-start: 1;
+		grid-row-start: 14;
+	}
+
+	&:nth-child(13) {
+		grid-column-start: 4;
+		grid-row-start: 16;
+	}
 }
 
 .research-item__img {
 	grid-row: 1 / -1;
 	grid-column: 1 / -1;
 	position: relative;
-//	min-width: 300px;
-//	height: 300px;
 	overflow: hidden;
 //	z-index: -1;
 	img {
+		display: none;
 		position: absolute;
 		max-height: 100%;
-		-webkit-filter: grayscale(100%) blur(1px);
-		filter: grayscale(100%) blur(1px);
+		-webkit-filter: grayscale(100%) blur(2px);
+		filter: grayscale(100%) blur(2px);
 	//	-webkit-transition: filter .3s;
 	//	transition: filter .3s;
 	}
