Add initial SCSS setup/import for person page

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,6 +13,7 @@
 @import "research";
 @import "progress-tracker"; // only while site under production
 @import "blog-post";
+@import "person";
 
 * {
 	box-sizing: border-box;
