--- a/assets/css/_sass/_blog-post.scss
+++ b/assets/css/_sass/_blog-post.scss
@@ -2,7 +2,7 @@
 
 /* Universal Styles */
 
-[class*="post-"] {
+[class*="post-"], [class*="person-"] {
 	a {
 		font-family: "Raleway", sans-serif !important;
 		font-weight: bold;
