--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -114,8 +114,7 @@ body {
 
 /****************** 1. Default Styles: *******************/
 
-/* All section titles: */
-
+// section titles
 [class*="__title"][class*="home-"] {
 	margin-bottom: .5em;
 	margin-top: 1em;
@@ -129,9 +128,8 @@ body {
 	}
 }
 
-/* All homepage links: */
-
-[class*="home-"], [class*="maker-"], [class*="post-"] {
+// in-text links, topic pages
+[class*="home-"], [class*="maker-"], [class*="post-"], [class*="person-"] {
 	a {
 		font-family: "base-mono-narrow", monospace;
 	//	font-weight: bold; // >>>>>>>>>>>>>>>>> undo this and redo it as a separate commit
@@ -147,6 +145,18 @@ body {
 	}
 }
 
+// updated in-text links
+[class*="post-"], [class*="person-"] {
+	a {
+		font-family: "Raleway", sans-serif !important;
+		font-weight: bold;
+		border-bottom: 2px solid hsla(186,80%,70%,1) !important;
+		&:hover, &:focus {
+			background-color: hsla(186,80%,70%,1) !important;
+		}
+	}
+}
+
 /* All call-to-action buttons: */
 
 [class*="__cta"] {
@@ -158,7 +168,7 @@ body {
 		margin-top: 4px;
 		font-size: 1.5rem;
 	//	font-family: "Inconsolata", monospace;
-		font-family: "base-mono-wide", monospace;
+		font-family: "base-mono-wide", monospace !important;
 		font-weight: 700;
 		line-height: 1;
 		text-decoration: none;
