Add important flag to bg transparency on btn

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -176,7 +176,7 @@ body {
 		color: cyan;
 		border: 2px solid cyan;
 		&:hover, &:focus {
-			background-color: transparent;
+			background-color: transparent !important;
 		}
 		span {
 			display: none;
