--- a/assets/css/_sass/_footer.scss
+++ b/assets/css/_sass/_footer.scss
@@ -21,7 +21,7 @@
 /* Main styles: */
 
 .footer-wrapper {
-	margin-top: 2rem;
+//	margin-top: 2rem;
 	padding: 1rem 4.167%;
 	background-color: rgba(0,0,0,1);
 	@media screen and (min-width: 900px) {
