Add <p> w/in about section to test output of ppl categories logic

--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -38,6 +38,9 @@ layout: default
 		<div class="person__description">
 			<div class="person-describe__title">About</div>
 			<div class="person-describe__text">{{ content }}</div>
+			<p> <!-- liquid testing -->
+				<!-- test for praxis/grad fellowships: -->
+			</p>
 		</div>
 
 		<div class="person__posts">
