Add logic for grad fellows, praxis, & makerspace ppl; re-order blocks

--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -41,15 +41,50 @@ layout: default
 			<p> <!-- liquid testing -->
 				<h3>Categories</h3>
 				<ul>
-				{% if page.people-category contains 'Staff' %}
+				{% assign pc = page.people-category %}
+				<!-- staff -->
+				{% if pc contains 'Staff' %}
 					<li>Staff</li>
 				{% endif %}
-				{% if page.people-category contains 'LAMI Fellow' %}
-					<li>{{ page.people-category[0] }} LAMI Fellow</li>
+
+				<!-- praxis/grad fellows: match years to program -->
+				{% assign yrcheck1 = pc[0] | slice: 0, 2 %}
+				{% assign yrcheck2 = pc[1] | slice: 0, 2 %}
+
+				<!-- grad fellow -->
+				{% if pc contains 'Graduate Fellow' %}
+					{% if yrcheck2 == '20' %}
+						<li>{{ pc[1] }} Graduate Fellow</li>
+					{% elsif yrcheck1 == '20' %}
+						<li> {{ pc[0] }} Graduate Fellow</li>
+					{% else %}
+						<li>Graduate Fellow</li>
+					{% endif %}
+				{% endif %}
+				<!-- praxis -->
+				{% if pc contains 'Praxis Fellow' %}
+					{% if yrcheck1 == '20' %}
+						<li>{{ pc[0] }} Praxis Fellow</li>
+					{% else %}
+						<li>Praxis Fellow</li>
+					{% endif %}
+				{% endif %}
+
+				<!-- LAMI -->
+				{% if pc contains 'LAMI Fellow' %}
+					<li>{{ pc[0] }} LAMI Fellow</li>
+				{% endif %}
+				<!-- technologists -->
+				{% if pc contains 'Student Assistant' %}
+					{% if pc.size == 2 %}
+						<li>{{ pc[0] }} Makerspace Technologist</li>
+					{% else %}
+						<li>Makerspace Technologist</li>
+					{% endif %}
 				{% endif %}
 				</ul>
 			</p>
-		</div>
+		</div> <!-- end 'about' -->
 
 		<div class="person__posts">
 		{% assign author_posts = site.posts | where: "author", page.slug %}
