--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -87,16 +87,19 @@ layout: default
 		</div> <!-- end 'about' -->
 
 		<div class="person__posts">
-		{% assign author_posts = site.posts | where: "author", page.slug %}
+		{% assign author_posts = site.fake-blog | where: "author", page.slug | reverse %}
 		{% if author_posts.size >= 1 %}
-		  <h2>Posts by {{ page.title }}</h2>
-		  <nav class="posts">
-		    <ul>
-		    {% for post in author_posts %}
-		      <li><a href="{{ post.url }}">{{ post.title }}</a> - {{ post.date | date: "%B %-d, %Y" }}</li>
-		    {% endfor %}
-		    </ul>
-		  </nav>
+		  <h2 class="person-posts__title">Posts by {{ page.title }}</h2>
+	    <ul class="person-posts__list">
+	    {% for post in author_posts %}
+	      <li>
+					<a href="{{ post.url }}">
+						<div class="person__post-title">{{ post.title }}</div>
+						<span>{{ post.date | date: "%B %-d, %Y" }}</span>
+					</a>
+	      </li>
+	    {% endfor %}
+	    </ul>
 		{% endif %}
 		</div>
 
