--- a/assets/css/_sass/_person.scss
+++ b/assets/css/_sass/_person.scss
@@ -148,7 +148,7 @@
 .person-posts__list {
 	position: relative;
 	display: flex;
-	margin: 0;
+	padding: 0;
 	list-style-type: none;
 	li {
 		position: relative;
