Update number of columns in progress tracker pages grid

--- a/assets/css/_sass/_progress-tracker.scss
+++ b/assets/css/_sass/_progress-tracker.scss
@@ -50,7 +50,7 @@
 .progress-pages-grid {
 	position: relative;
 	display: grid;
-	grid-template-columns: 64px 2fr 1fr 2fr;
+	grid-template-columns: 64px 1fr 1fr 1fr 2fr;
 }
 
 [class*="progress-"][class*="__title"] {
