Change grid area name, remove bottom margin on name

--- a/assets/css/_sass/_person.scss
+++ b/assets/css/_sass/_person.scss
@@ -53,8 +53,8 @@
 
 .person__big-title {
 	position: relative;
-	grid-area: title;
-	margin-bottom: .5em;
+	grid-area: name;
+//	margin-bottom: .5em;
 	font-size: 3rem;
 	font-weight: 900;
 	line-height: 1;
