Create and import SCSS partial for events page

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,6 +14,7 @@
 @import "progress-tracker"; // only while site under production
 @import "blog-post";
 @import "person";
+@import "events";
 
 * {
 	box-sizing: border-box;
