Use Python to set up CSS classes from new events page HTML

--- a/assets/css/_sass/_events.scss
+++ b/assets/css/_sass/_events.scss
@@ -1,3 +1,71 @@
 /* Events Page: */
 
-/* Universal */
+.events-wrapper {
+
+}
+
+/* Header: */
+
+.events-page-header {
+
+}
+
+.events-header__big-title {
+
+}
+
+.events-header__subtitle {
+
+}
+
+/* Main Content: */
+
+.events-main-content {
+
+}
+
+.events-gallery {
+
+}
+
+/* Item: */
+
+.events-gallery__item {
+
+}
+
+/* Date: */
+
+.events-item__date {
+
+}
+
+/* Title: */
+
+.events-item__title {
+
+}
+
+/* Time/place: */
+
+.events-item__logistics {
+
+}
+
+.events-logistics__time {
+
+}
+
+.events-logistics__place {
+
+}
+
+/* Link to details: */
+
+.events-item__details {
+
+}
+
+.events-detail__cta {
+
+}
