--- a/assets/css/_sass/_events.scss
+++ b/assets/css/_sass/_events.scss
@@ -1,7 +1,12 @@
 /* Events Page: */
 
 .events-wrapper {
-
+	padding: 0 4.167%;
+	padding-top: calc(1em + 60px);
+	@media screen and (min-width: 600px) {
+		padding: 0 8.33%;
+		padding-top: calc(3rem + 60px); // 2 line heights
+	}
 }
 
 /* Header: */
